Finish search sudoku