@@ -2,7 +2,6 @@ package Solver;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashSet;
@@ -25,7 +24,7 @@ public class SudokuSolver {
 	
 	public Integer[][] solve() {
 		// Build graph
-		Set<Integer>[][] domains = new Set[getNumberOfRows()][getNumberOfColumns()];
+		Set<Integer>[][] domains = new HashSet[getNumberOfRows()][getNumberOfColumns()];
 		Queue<Constraint> constraints = new LinkedList<>();
 		Set<Constraint> constraintsHelper = new HashSet<>();
 		init(domains, constraints, constraintsHelper);
@@ -34,9 +33,8 @@ public class SudokuSolver {
 		AC3_Sudoku(domains, constraints, constraintsHelper);
 		
 		// Search
-		Integer[][] solution = FindSolution(domains);
 		
-		return solution;
+		return FindSolution(domains);
 	}
 	
 	private Integer[][] FindSolution(Set<Integer>[][] domains) {
@@ -44,107 +42,107 @@ public class SudokuSolver {
 		Integer[][] solution = new Integer[9][9];
 		
 		List<Pair<Integer, Integer>> sortedDomains = SortDomains(domains);
-
+		
 		boolean hasSolution = SearchRecursive(domains, sortedDomains, 0, solution);
-		if (hasSolution){ return solution; }
+		if (hasSolution) {
+			return solution;
+		}
 		return null;
 	}
-
-
+	
 	private List<Pair<Integer, Integer>> SortDomains(Set<Integer>[][] domains) {
 		List<Pair<Set<Integer>, Pair<Integer, Integer>>> lst = new ArrayList<>();
-
-		for (int r = 0; r < getNumberOfRows(); r++){
-			for (int c = 0; c < getNumberOfColumns(); c++){
+		
+		for (int r = 0; r < getNumberOfRows(); r++) {
+			for (int c = 0; c < getNumberOfColumns(); c++) {
 				lst.add(new Pair<>(domains[r][c], new Pair<>(r, c)));
 			}
 		}
-
-		Collections.sort(lst, (p1,p2) -> p1.getKey().size() - p2.getKey().size());
 		
-		return lst.stream().map(t->t.getValue()).collect(Collectors.toList());
+		lst.sort(Comparator.comparingInt(p -> p.getKey().size()));
+		
+		return lst.stream().map(Pair::getValue).collect(Collectors.toList());
 	}
-
+	
 	private boolean SearchRecursive(Set<Integer>[][] domains, List<Pair<Integer, Integer>> sortedDomains,
-			int index, Integer[][] solution) {
-				if (index == sortedDomains.size()){
-					return true;
-				}
-
-				Pair<Integer, Integer> p = sortedDomains.get(index);
-				int row = p.getKey();
-				int col = p.getValue();
-				Set<Integer> domain = domains[row][col];
-
-				if (domain.isEmpty()){
-					return false;
-				}
-				
-				for (Integer n : domain) {
-					solution[row][col] = n;
-					List<Pair<Integer, Integer>> restrictedNDomains = RestrictN(domains, n, row, col);;
-					
-					// resorting pairs from index+1
-
-					if (!SearchRecursive(domains, sortedDomains, index+1, solution)){
-						solution[row][col] = 0;
-						RevertN(domains, n, restrictedNDomains);
-					}
-					else{
-						return true;
-					}
-
-				}
+																	int index, Integer[][] solution) {
+		if (index == sortedDomains.size()) {
+			return true;
+		}
 		
-				return false;
+		Pair<Integer, Integer> p = sortedDomains.get(index);
+		int row = p.getKey();
+		int col = p.getValue();
+		Set<Integer> domain = domains[row][col];
+		
+		if (domain.isEmpty()) {
+			return false;
+		}
+		
+		for (Integer n : domain) {
+			solution[row][col] = n;
+			List<Pair<Integer, Integer>> restrictedNDomains = RestrictN(domains, n, row, col);
+			
+			// resorting pairs from index+1
+			
+			if (!SearchRecursive(domains, sortedDomains, index + 1, solution)) {
+				solution[row][col] = 0;
+				RevertN(domains, n, restrictedNDomains);
+			} else {
+				return true;
+			}
+			
+		}
+		
+		return false;
 	}
-
+	
 	private void RevertN(Set<Integer>[][] domains, Integer n, List<Pair<Integer, Integer>> restrictedNDomains) {
-		for (Pair<Integer,Integer> pair : restrictedNDomains) {
+		for (Pair<Integer, Integer> pair : restrictedNDomains) {
 			domains[pair.getKey()][pair.getValue()].add(n);
 		}
 	}
-
+	
 	private List<Pair<Integer, Integer>> RestrictN(Set<Integer>[][] domains, Integer n, int row, int col) {
 		List<Pair<Integer, Integer>> restrictedDomains = new ArrayList<>();
-
-		for (int c = 0; c < getNumberOfColumns(); c++){
-			if (c != col){
-				if (domains[row][c].remove(n)){
-					restrictedDomains.add(new Pair<Integer,Integer>(row, c));
+		
+		for (int c = 0; c < getNumberOfColumns(); c++) {
+			if (c != col) {
+				if (domains[row][c].remove(n)) {
+					restrictedDomains.add(new Pair<>(row, c));
 				}
-			}	
+			}
 		}
-
-		for (int r = 0; r < getNumberOfRows(); r++){
-			if (r != row){
-				if (domains[r][col].remove(n)){
-					restrictedDomains.add(new Pair<Integer,Integer>(r, col));
+		
+		for (int r = 0; r < getNumberOfRows(); r++) {
+			if (r != row) {
+				if (domains[r][col].remove(n)) {
+					restrictedDomains.add(new Pair<>(r, col));
 				}
-			}	
+			}
 		}
-
+		
 		int startRow = (row / 3) * 3;
 		int startCol = (col / 3) * 3;
 		for (int i = startRow; i < startRow + 3; i++) {
 			for (int j = startCol; j < startCol + 3; j++) {
-				if (i != row && j != col){
-					if (domains[i][j].remove(n)){
-						restrictedDomains.add(new Pair<Integer,Integer>(i, j));
+				if (i != row && j != col) {
+					if (domains[i][j].remove(n)) {
+						restrictedDomains.add(new Pair<>(i, j));
 					}
 				}
 			}
 		}
 		return restrictedDomains;
 	}
-
+	
 	private void AC3_Sudoku(Set<Integer>[][] domains, Queue<Constraint> constraintsQ, Set<Constraint> constraintsHelper) {
 		while (!constraintsQ.isEmpty()) {
 			Constraint constraint = constraintsQ.poll();
 			constraintsHelper.remove(constraint);
 			Set<Integer> domain = domains[constraint.getRow()][constraint.getCol()];
 			List<Set<Integer>> relatedDomains = getRelatedDomains(constraint, domains);
-			if (!arcConsistency(domain, relatedDomains)){
+			if (!arcConsistency(domain, relatedDomains)) {
 				// arcConsistency update the domain if needed
 				// If the constraint is not consistent - update constraints Queue
 				updateConstraints(constraint, constraintsQ, constraintsHelper);
@@ -154,24 +152,24 @@ public class SudokuSolver {
 	}
 	
 	private void updateConstraints(Constraint constraint, Queue<Constraint> constraintsQ,
-			Set<Constraint> constraintsHelper) {
-		Constraint.ConstraintType conTypes[] = { Constraint.ConstraintType.ROW, Constraint.ConstraintType.COL, Constraint.ConstraintType.BLOCK };
+																 Set<Constraint> constraintsHelper) {
+		ConstraintType[] conTypes = { ConstraintType.ROW, ConstraintType.COL, ConstraintType.BLOCK };
 		for (ConstraintType constraintType : conTypes) {
-			if (constraintType != constraint.getConstraintType()){
+			if (constraintType != constraint.getConstraintType()) {
 				AddAllConstraints(constraintType, constraintsQ, constraintsHelper, constraint);
 			}
 		}
 		
 	}
-
-	private void AddAllConstraints(Constraint.ConstraintType constraintType, Queue<Constraint> constraintsQ,
-			Set<Constraint> constraintsHelper, Constraint constraint) {
-		switch (constraintType){
+	
+	private void AddAllConstraints(ConstraintType constraintType, Queue<Constraint> constraintsQ,
+																 Set<Constraint> constraintsHelper, Constraint constraint) {
+		switch (constraintType) {
 			case ROW:
 				for (int i = 0; i < getNumberOfColumns(); i++) {
 					if (i != constraint.getCol()) {
 						Constraint c = new Constraint(constraint.getRow(), i, constraintType);
-						if (!constraintsHelper.contains(c)){
+						if (!constraintsHelper.contains(c)) {
 							constraintsHelper.add(c);
 							constraintsQ.add(c);
 						}
@@ -182,7 +180,7 @@ public class SudokuSolver {
 				for (int i = 0; i < getNumberOfRows(); i++) {
 					if (i != constraint.getRow()) {
 						Constraint c = new Constraint(i, constraint.getCol(), constraintType);
-						if (!constraintsHelper.contains(c)){
+						if (!constraintsHelper.contains(c)) {
 							constraintsHelper.add(c);
 							constraintsQ.add(c);
 						}
@@ -194,9 +192,9 @@ public class SudokuSolver {
 				int startCol = (constraint.getCol() / 3) * 3;
 				for (int i = startRow; i < startRow + 3; i++) {
 					for (int j = startCol; j < startCol + 3; j++) {
-						if (i != constraint.getRow() && j != constraint.getCol()){
+						if (i != constraint.getRow() && j != constraint.getCol()) {
 							Constraint c = new Constraint(i, j, constraintType);
-							if (!constraintsHelper.contains(c)){
+							if (!constraintsHelper.contains(c)) {
 								constraintsHelper.add(c);
 								constraintsQ.add(c);
 							}
@@ -205,43 +203,43 @@ public class SudokuSolver {
 				}
 				break;
 		}
-
+		
 	}
-
+	
 	private boolean arcConsistency(Set<Integer> domain, List<Set<Integer>> relatedDomains) {
 		boolean con = true;
+		Set<Integer> domainsToRemove = new HashSet<>();
 		for (Integer n : domain) {
 			int[] one_to_nine = new int[10];
 			one_to_nine[n] = 1;
-			if (!check_nRecursive(one_to_nine, relatedDomains, 0)){
-				domain.remove(n);
+			if (!check_nRecursive(one_to_nine, relatedDomains, 0)) {
+				domainsToRemove.add(n);
+				//				domain.remove(n);
 				con = false;
 			}
 		}
-
+		domain.removeAll(domainsToRemove);
 		return con;
 	}
-
+	
 	private boolean check_nRecursive(int[] one_to_nine, List<Set<Integer>> relatedDomains, int i) {
-		if (i == relatedDomains.size()){
+		if (i == relatedDomains.size()) {
 			return true;
 		}
 		
 		for (Integer p : relatedDomains.get(i)) {
-			if (one_to_nine[p] == 0){
+			if (one_to_nine[p] == 0) {
 				one_to_nine[p] = 1;
-				if (!check_nRecursive(one_to_nine, relatedDomains, i+1)){
+				if (!check_nRecursive(one_to_nine, relatedDomains, i + 1)) {
 					one_to_nine[p] = 0;
-				}
-				else{
+				} else {
 					return true;
 				}
 			}
 		}
-
 		return false;
 	}
-
+	
 	private List<Set<Integer>> getRelatedDomains(Constraint constraint, Set<Integer>[][] domains) {
 		List<Set<Integer>> relatedDomains = new ArrayList<>();
 		switch (constraint.getConstraintType()) {
@@ -307,7 +305,7 @@ public class SudokuSolver {
 		for (int r = 0; r < getNumberOfRows(); r++) {
 			for (int c = 0; c < getNumberOfColumns(); c++) {
 				if (puzzle[r][c] != null) {
-					domains[r][c] = Set.of(puzzle[r][c]);
+					domains[r][c] = new HashSet<>(Collections.singletonList(puzzle[r][c]));
 				} else {
 					domains[r][c] = SudokuSolver.getAllDomains();
 				}
@@ -316,6 +314,7 @@ public class SudokuSolver {
 	}
 	
 	private static Set<Integer> getAllDomains() {
-		return Set.of(1, 2, 3, 4, 5, 6, 7, 8, 9);
+		Integer[] arr = { 1, 2, 3, 4, 5, 6, 7, 8, 9 };
+		return new HashSet<>(Arrays.asList(arr));
 	}
 }
